# microservice-template-actix

./: .gitignore  Dockerfile  README.md  docker-compose.yml
api/: Cargo.toml
api/src/: main.rs
